--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>SMBarber - Responsive HTML5 Template</title>  
+    <title>Black Hair Spa</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.jpeg">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -142,7 +142,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="uploads/barber_team_01.jpg" alt="" class="img-responsive">
+									<img src="images/team/shameer.png" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -153,18 +153,18 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Soren Bo Bostian</h3>
+                                    <h3>Shameer</h3>
                                     <small>The Founder</small>
                                 </div>
                                 <!-- end title -->
-                                <p>Hello guys, I am Soren from Sirbistana. I am senior art director and founder of The Barber Shop Company.</p>
+                                <p>Hello guys, I am Shameer from Black Hai Spa. I am senior art director and founder of The Barber Shop Company.</p>
                             </div><!--widget -->
                         </div><!-- end col -->
 
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="uploads/barber_team_03.jpg" alt="" class="img-responsive">
+									<img src="images/team/shabeeb.png" alt="" class="img-responsive" height="10px">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -175,18 +175,18 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Bryan Saftler</h3>
+                                    <h3>Shabeeb</h3>
                                     <small>The Barber</small>
                                 </div>
                                 <!-- end title -->
-                                <p>Hello guys, I am Soren from Sirbistana. I am senior art director and barber of the Barber Shop Market.</p>
+                                <p>Hello guys, I am Shabeeb from Black Hai Spa. I am senior art director and barber of the Barber Shop Market.</p>
                             </div><!--widget -->
                         </div><!-- end col -->
 
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="uploads/barber_team_02.jpg" alt="" class="img-responsive">
+									<img src="images/team/shanib.png" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -197,11 +197,11 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Matthew Bayliss</h3>
+                                    <h3>Shanib</h3>
                                     <small>The Barber</small>
                                 </div>
                                 <!-- end title -->
-                                <p>Hello guys, I am Soren from Sirbistana. I am senior art director and barber of the Barber Shop Website.</p>
+                                <p>Hello guys, I am Shanib from Black Hai Spa. I am senior art director and barber of the Barber Shop Website.</p>
                             </div><!--widget -->
                         </div><!-- end col -->
                     </div><!-- end row -->
